--- a/assets/index.html
+++ b/assets/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-<body>
-<h1>Hello World!</h1>
-</body>
+  <head>
+    <script type="text/javascript" src="/pyreadasset=pyreadhome.js"></script>
+    <link rel="stylesheet" href="/pyreadasset=pyreadhome.css">
+  </head>
 </html>
