Base64 encode bool arrays and 32-bit int

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,12 @@
 
 <html>
   <head>
+    <meta charset="UTF-8">
     <script type="text/javascript" src="/pyreadasset=pyreadhome.js"></script>
     <link rel="stylesheet" href="/pyreadasset=pyreadhome.css">
   </head>
+  <body>
+    <div class='sidenav'></div>
+    <div class='article'></div>
+  </body>
 </html>
