async server and client working, seems stable - maybe issues with concurrent article usage in api

--- a/assets/index.html
+++ b/assets/index.html
@@ -3,8 +3,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="/pyreadasset=pyreadhome.js"></script>
-    <link rel="stylesheet" href="/pyreadasset=pyreadhome.css">
+    <script type="text/javascript" src="/pyreadasset?file=pyreadhome.js"></script>
+    <link rel="stylesheet" href="/pyreadasset?file=pyreadhome.css">
   </head>
   <body>
     <div class='sidenav'></div>
